--- a/index.html
+++ b/index.html
@@ -6,11 +6,25 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Comfortaa|Gravitas+One|Rammetto+One" rel="stylesheet">
 </head>
 <body>
-
-
-
-
+  <main>
+    <article>
+      <div class="watermelon">
+        <h2>Watermelon</h2>
+        <p class="micro">Watermelons are a sweet, popular fruit of summer, usually consumed fresh in slices. The rind of the fruit is mid- to dark green and usually mottled or striped, and the flesh can be red or pink (most commonly), orange, yellow, green or white.</p>
+      </div>
+      <div class="starfruit">
+        <h2>Starfruit</h2>
+        <p class="micro">The fruit has distinctive ridges running down its sides (usually five but can sometimes vary); when cut in cross-section, it resembles a star, hence its name. The entire fruit is edible and is usually eaten out of hand.</p>
+      </div>
+      <div class="persimmon">
+        <h2>Persimmon</h2>
+        <p class="micro">The non-astringent persimmon is squat like a tomato and is most commonly sold as <i>fuyu</i>. The ripe fruit of the cultivated strains range from glossy light yellow-orange to dark red-orange depending on the species and variety.</p>
+      </div>
+    </article>
+  </main>
 </body>
 </html>
