--- a/index.html
+++ b/index.html
@@ -11,18 +11,24 @@
 </head>
 <body>
   <main>
-    <article>
-      <div class="watermelon">
-        <h2>Watermelon</h2>
-        <p class="micro">Watermelons are a sweet, popular fruit of summer, usually consumed fresh in slices. The rind of the fruit is mid- to dark green and usually mottled or striped, and the flesh can be red or pink (most commonly), orange, yellow, green or white.</p>
+    <article class="pad-t-1-2">
+      <div class="watermelon-color">
+        <div class="watermelon pad-t-2 pad-b gutter-1-2 push-1-2 max-length">
+          <h2 class="tena push-0">Watermelon</h2>
+          <p class="giga">Watermelons are a sweet, popular fruit of summer, usually consumed fresh in slices. The rind of the fruit is mid- to dark green and usually mottled or striped, and the flesh can be red or pink (most commonly), orange, yellow, green or white.</p>
+        </div>
       </div>
-      <div class="starfruit">
-        <h2>Starfruit</h2>
-        <p class="micro">The fruit has distinctive ridges running down its sides (usually five but can sometimes vary); when cut in cross-section, it resembles a star, hence its name. The entire fruit is edible and is usually eaten out of hand.</p>
+      <div class="starfruit-color">
+        <div class="starfruit pad-t-2 pad-b gutter-1-2 push-1-2 max-length">
+          <h2 class="tena push-0">Starfruit</h2>
+          <p class="giga">The fruit has distinctive ridges running down its sides (usually five but can sometimes vary); when cut in cross-section, it resembles a star, hence its name. The entire fruit is edible and is usually eaten out of hand.</p>
+        </div>
       </div>
-      <div class="persimmon">
-        <h2>Persimmon</h2>
-        <p class="micro">The non-astringent persimmon is squat like a tomato and is most commonly sold as <i>fuyu</i>. The ripe fruit of the cultivated strains range from glossy light yellow-orange to dark red-orange depending on the species and variety.</p>
+      <div class="persimmon-color">
+        <div class="persimmon pad-t-2 pad-b gutter-1-2 push-1-2 max-length">
+          <h2 class="tena push-0">Persimmon</h2>
+          <p class="giga">The non-astringent persimmon is squat like a tomato and is most commonly sold as <i>fuyu</i>. The ripe fruit of the cultivated strains range from glossy light yellow-orange to dark red-orange depending on the species and variety.</p>
+        </div>
       </div>
     </article>
   </main>
